--- a/.github/workflows/CODEOWNERS
+++ b/.github/workflows/CODEOWNERS
@@ -2,5 +2,5 @@ Define who owns the code in the repository
 
 * aerielellisk5
 *.js @aerielellisk5
-*.yml @aerielellisk5
+*.yml @aerielsgit
 /public/ @aerielellisk
