--- a/.github/workflows/CODEOWNERS
+++ b/.github/workflows/CODEOWNERS
@@ -3,4 +3,4 @@ Define who owns the code in the repository
 * aerielellisk5
 *.js @aerielellisk5
 *.yml @aerielsgit
-/public/ @aerielellisk
+/public/ @aerielellisk5
