--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       - run: npm ci
       # what is the difference between npm ci and npm install
       - run: npm run format:check 
+      - run: npm run format 
       - run: npm test -- --coverage
         env:
           CI: true
