--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,12 @@ jobs:
 
       - name: Deploy to staging environment
         if: github.event_name == 'push'
-        run: npx surge --project ./build --domain truculent-profit.surge.sh
+
+        # https://www.freecodecamp.org/news/error-error-0308010c-digital-envelope-routines-unsupported-node-error-solved/
+        run: |
+          npx uninstall react-scripts
+          npx install react-scripts
+          npx surge --project ./build --domain truculent-profit.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
