--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "surge": "^0.23.1",
-    "web-vitals": "^3.3.2"
+    "web-vitals": "^3.3."
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -39,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "typescript": "4.9.5"
   }
 }
