--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "surge": "^0.23.1",
-    "web-vitals": "^3.3."
+    "web-vitals": "^3.3.2"
   },
 
   "scripts": {
