--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Build Project
         if: github.event_name == 'push'
         run: |
+          npm audit fix --force
           npm run build
 
       - name: Deploy to staging environment
@@ -32,8 +33,8 @@ jobs:
 
         # https://www.freecodecamp.org/news/error-error-0308010c-digital-envelope-routines-unsupported-node-error-solved/
         run: |
-          # npx uninstall react-scripts
-          # npx install react-scripts
+          npx uninstall react-scripts
+          npx install react-scripts
           npx surge --project ./build --domain truculent-profit.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
