working with aritfact

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          cache: 'npm'
       - run: npm ci
       # what is the difference between npm ci and npm install
       - run: npm run format
@@ -20,11 +21,20 @@ jobs:
       - run: npm test -- --coverage
         env:
           CI: true
-      
+      - name: Upload Test Coverage
+        uses: actions/upload-artifact@v3 
+        with:
+          name: code-coverage
+          path: coverage
       - name: Build Project
         if: github.event_name == 'push'
         run: |
           npm run build
+      - name: Upload Build Coverage
+        uses: actions/upload-artifact@v3 
+        with:
+          name: build
+          path: build
       - name: Deploy to staging environment
         if: github.event_name == 'push'
 
@@ -36,6 +46,3 @@ jobs:
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
-
-
-          
