--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,16 @@ jobs:
         run: |
           npm run build
       - name: Upload Build Coverage
+        if: github.event_name == 'push'
         uses: actions/upload-artifact@v3 
         with:
           name: build
           path: build
+      
+      # - uses: actions/download-artifact
+      # allows the artifact to be downloaded in your workspace
+
+
       - name: Deploy to staging environment
         if: github.event_name == 'push'
 
@@ -46,3 +52,5 @@ jobs:
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
+
+# would like to trigger an action again
