--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -11,3 +11,5 @@ jobs:
         run: |
           curl -X POST -H 'Content-type: application/json'
           --data '{"text":"New issue created: <${{ github.event.issue.html_url }}|${{ github.event.issue.title}}.>"}' ${{ secrets.SLACK_WEBHOOK }}
+
+# updated the webhook
