--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Slack slack-message
         run: |
-          curl -X POST -H 'Content-type: application/json'
+          curl -X POST -H 'Content-type: application/json' \
           --data '{"text":"New issue created: <${{ github.event.issue.html_url }}|${{ github.event.issue.title}}.>"}' ${{ secrets.SLACK_WEBHOOK }}
 
 # updated the webhook2
